--- a/Contact_us.html
+++ b/Contact_us.html
@@ -14,7 +14,7 @@
             <img class="logo" src="fornaio.png" alt="A logo">
           </figure>
           
-        <button class="button_header" type="button" onclick="window.location.href='sourdough_webpage.html'"> Home
+        <button class="button_header" type="button" onclick="window.location.href='index.html'"> Home
         </button>
 
         <h3>Contact Form</h3>
