--- a/Shop.html
+++ b/Shop.html
@@ -11,7 +11,7 @@
 <body>
     <img class="logo" src="fornaio.png" alt="A logo">
     <div class="header">
-        <button class="button_header" type="button" onclick="window.location.href='sourdough_webpage.html'"> Home
+        <button class="button_header" type="button" onclick="window.location.href='index.html'"> Home
         </button>
         <button class="button_header" type="button" onclick="window.location.href='Shop.html'"> Shop </button>
         <button class="button_header" type="button" onclick="window.location.href='Recipes.html'"> Recipes </button>
