--- a/Contact_us.html
+++ b/Contact_us.html
@@ -30,7 +30,7 @@
             <label for="country">Your location</label><br>
             <select id="country" name="country"><br>
                 <option value="australia">Finland</option>
-                <option value="canada">Europe</option>
+                <option value="europe">Europe</option>
                 <option value="usa">USA</option>
                 <option value="None">None of these</option>
             </select>
