--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   </figure>
 
   <div class="header">
-    <button class="button_header" type="button" onclick="window.location.href='sourdough_webpage.html'"> Home
+    <button class="button_header"  onclick="window.location.href='sourdough_webpage.html'"> Home
     </button>
-    <button class="button_header" type="button" onclick="window.location.href='Shop.html'"> Shop </button>
-    <button class="button_header" type="button" onclick="window.location.href='Recipes.html'"> Recipes </button>
-    <button class="button_header" type="button" onclick="window.location.href='Videos.html'"> Videos </button>
+    <button class="button_header"  onclick="window.location.href='Shop.html'"> Shop </button>
+    <button class="button_header"  onclick="window.location.href='Recipes.html'"> Recipes </button>
+    <button class="button_header"  onclick="window.location.href='Videos.html'"> Videos </button>
     <button class="button_header" type="button" onclick="window.location.href='Contact_us.html'"> Contact </button>
   </div><br><br><br>
 
