--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
   </footer>
   <a class="validator"
-    href="https://validator.w3.org/check?uri=https://lorantkatona.github.io/LorantKatona.github.io-project/">
+    href="https://validator.w3.org/check?uri=https://lorantkatona.github.io/final_sourdough_web/">
     <img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0!" height="30" width="80">
   </a>
 
