--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </figure>
 
   <div class="header">
-    <button class="button_header"  onclick="window.location.href='sourdough_webpage.html'"> Home
+    <button class="button_header"  onclick="window.location.href='index.html'"> Home
     </button>
     <button class="button_header"  onclick="window.location.href='Shop.html'"> Shop </button>
     <button class="button_header"  onclick="window.location.href='Recipes.html'"> Recipes </button>
