--- a/The_leaven.html
+++ b/The_leaven.html
@@ -16,7 +16,15 @@
         <button class="button_header" type="button" onclick="window.location.href='Videos.html'"> Videos </button>
         <button class="button_header" type="button" onclick="window.location.href='Contact.html'"> Contact </button>
     </div>
-
+    <p>Unlike yeast based doughs most doughs which are based on leaven require lots of proving and rising time.
+        However, different bakery products require different dough. The hydration of the doughs may vary from 50% to
+        85%. Usually, the dough should be soft and smooth.It should not leave a residue on your hands, but should not be
+        super stiff either. If you're making bread by hand (just like me &#128515;), there are three steps essential to
+        success. After you mix the starter, the flour and the water let the dough to rest about 30 minutes. No, I did
+        not forget to add the salt, intentionally I did not put it yet into the dough because without salt the
+        microorganisms will reproduce faster. During this resting time the flour will get hydrated and the kneeing will
+        be easier.
+    </p>
     <figure>
         <img class="leaven" src="Pizza_dough.jpg" alt="A dough"> 
     </figure>
