--- a/Shop.html
+++ b/Shop.html
@@ -13,7 +13,7 @@
     <div class="header">
         <button class="button_header" type="button" onclick="window.location.href='index.html'"> Home
         </button>
-        <button class="button_header" type="button" onclick="window.location.href='Shop.html'"> Shop </button>
+        <button class="button_header" type="button" onclick="window.location.href='Shop.html'"> Products </button>
         <button class="button_header" type="button" onclick="window.location.href='Recipes.html'"> Recipes </button>
         <button class="button_header" type="button" onclick="window.location.href='Videos.html'"> Videos </button>
         <button class="button_header" type="button" onclick="window.location.href='Contact_us.html'"> Contact </button>
