--- a/The_leaven.html
+++ b/The_leaven.html
@@ -11,7 +11,7 @@
 <body class="leaven_layout">
     <div class="header">
         <button class="button_header" type="button" onclick="window.location.href='index.html'"> Home </button>
-        <button class="button_header" type="button" onclick="window.location.href='Shop.html'"> Shop </button>
+        <button class="button_header" type="button" onclick="window.location.href='Shop.html'"> Products </button>
         <button class="button_header" type="button" onclick="window.location.href='Recipes.html'"> Recipes </button>
         <button class="button_header" type="button" onclick="window.location.href='Videos.html'"> Videos </button>
         <button class="button_header" type="button" onclick="window.location.href='Contact.html'"> Contact </button>
