--- a/Shop.html
+++ b/Shop.html
@@ -6,6 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="FirstPage.css">
     <title>Sourdough shop</title>
+        <style>
+        .row {
+            display: -ms-flexbox;
+            font-size:larger;
+            display: flex;
+            -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+            padding: 0 4px;
+        }
+
+        /* Create two equal columns that sits next to each other */
+        .column {
+            -ms-flex: 50%;
+            /* IE 10 */
+            flex: 50%;
+            padding: 0 4px;
+        }
+
+        .column img {
+            margin-top: 14px;
+            vertical-align: middle;
+        }
+    </style>
+
+
 </head>
 
 <body>
@@ -28,11 +53,30 @@
             <li>bread</li>
             <li>baguette</li>
             <li>buns</li>
+            <li>pizza</li>
+            <li>cocoa snail</li>
+            <li>"pulla"</li>
         </ul><br>
         <h2 style="color:black;">Where?</h2><br>
         <p>In the larger capital area of Finland alias Uusimaa.</p><br>
         <h2 style="color:black;">How much?</h2><br>
         <p>Each product has different price based on its weight and baking complexity</p><br>
+    </div>
+    <div class="row">
+        <div class="column">
+            <img src="IMG_20181226_112720.jpg" style="width:90%">
+            <img src="Pizza_kek_teriton.jpg" style="width:90%">
+            <img src="pulla.jpg" style="width:90%">
+            <img src="Scones_with_cracklings.jpg" style="width:90%">
+        </div>
+
+        <div class="column">
+            <img src="ciabatta.jpg" style="width:90%">
+            <img src="sampyle.jpg" style="width:80%">
+            <img src="pizza.jpg" style="width:70%">
+            <img src="kakaos_csiga.jpg" style="width:70%">
+            <img src="kalacs.jpg" style="width:70%">
+        </div>
     </div>
 
 
