--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <button class="menu_button" type="button" onclick="window.location.href='The_starter_01.html';"> The
         starter</button><br>
-      <button class="menu_button" type="button" onclick="window.location.href='The_leaven.html';">The leaven</button>
+      <button class="menu_button" type="button" onclick="window.location.href='The_leaven.html';">The dough</button>
 
     </div>
 
@@ -73,11 +73,6 @@
     </article>
   </div><br><br><br><br><br><br>
 
-  <!--<div class="footer">
-    This web page is a personal page where the page owner presents its bread baking hobby.
-    For any inquires you can reach out at <a href="mailto:kflorant@yahoo.com"
-      style="color: grey">kflorant@yahoo.com</a>
-  </div>-->
   <footer
     style="background-color:#373A36;color: whitesmoke; text-align:left;padding:10px;margin-top:7px;font-size:14px;">
     This web page is a personal page where the page owner presents its bread baking hobby.
