--- a/The_leaven.html
+++ b/The_leaven.html
@@ -22,7 +22,7 @@
         super stiff either. If you're making bread by hand (just like me &#128515;), there are three steps essential to
         success. After you mix the starter, the flour and the water let the dough to rest about 30 minutes. No, I did
         not forget to add the salt, intentionally I did not put it yet into the dough because without salt the
-        microorganisms will reproduce faster. During this resting time the flour will get hydrated and the kneeing will
+        microorganisms will reproduce faster. During this resting time the flour will get hydrated and the kneading will
         be easier.
     </p>
     <figure>
