--- a/Shop.html
+++ b/Shop.html
@@ -60,18 +60,18 @@
     </div>
     <div class="row">
         <div class="column">
-            <img src="IMG_20181226_112720.jpg" style="width:90%">
-            <img src="Pizza_kek_teriton.jpg" style="width:90%">
-            <img src="pulla.jpg" style="width:90%">
-            <img src="Scones_with_cracklings.jpg" style="width:90%">
+            <img src="IMG_20181226_112720.jpg" alt="Picture" style="width:90%">
+            <img src="Pizza_kek_teriton.jpg" alt="Picture" style="width:90%">
+            <img src="pulla.jpg" alt="Picture" style="width:90%">
+            <img src="Scones_with_cracklings.jpg" alt="Picture" style="width:90%">
         </div>
 
         <div class="column">
-            <img src="ciabatta.jpg" style="width:90%">
-            <img src="sampyle.jpg" style="width:80%">
-            <img src="pizza.jpg" style="width:70%">
-            <img src="kakaos_csiga.jpg" style="width:70%">
-            <img src="kalacs.jpg" style="width:70%">
+            <img src="ciabatta.jpg" alt="Picture" style="width:90%">
+            <img src="sampyle.jpg" alt="Picture" style="width:80%">
+            <img src="pizza.jpg" alt="Picture" style="width:70%">
+            <img src="kakaos_csiga.jpg" alt="Picture" style="width:70%">
+            <img src="kalacs.jpg" alt="Picture" style="width:70%">
         </div>
     </div>
 
