--- a/The_leaven.html
+++ b/The_leaven.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="FirstPage.css">
-  <title>The_leaven</title>
+  <title>The_dough</title>
 </head>
 
 <body class="leaven_layout">
