--- a/The_leaven.html
+++ b/The_leaven.html
@@ -27,6 +27,7 @@
     </p>
     <figure>
         <img class="leaven" src="Pizza_dough.jpg" alt="A dough"> 
+        <img class="leaven" src="magos_vekni.jpg" alt="Another dough">
     </figure>
 
     <div class="row">
