--- a/The_starter.html
+++ b/The_starter.html
@@ -97,7 +97,7 @@
                     <td>2 tbs</td>
                 </tr>
             </table>
-            <img src="kovasz.jpg" alt="kovasz" style="float:left; width:340px; height:480px; margin: 65px 55px 25px;">
+            <img src="kovasz.jpg" alt="kovasz" style="float:left; max-width:50%; height:auto; margin: 65px 55px 25px;">
         </div>
 
     </div>
